<resources>
    <string name="app_name">Human Health</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_summary">Summary</string>
    <string name="title_activity_entry_activity"/>
    <string name="title_activity_workout">Workout</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_user_summary">User Summary</string>
    <string name="menu_user_edit">User Edit</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="button_exercise_info">Exercise Info</string>
    <string name="button_start_exercise">Start Exercise</string>
    <string name="button_play_music">Play Music</string>

    <color name="white">#FFFFFF</color>
</resources>
