<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.psu.ist402.projectfittness.AboutActivity">
    <item
        android:id="@+id/action_summary"
        android:orderInCategory="100"
        android:title="@string/menu_user_summary"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/menu_user_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="300"
        android:title="@string/menu_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="400"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>
