<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserSummaryActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:minHeight="300dp"
            android:orientation="vertical"
            android:layout_above="@+id/linearLayout2">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1">

                <!-- User Details -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_gravity="left"
                        android:text="User Details"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="John Smith" />

                    <TextView
                        android:id="@+id/userAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:text="21 years old" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/userHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="6'0&quot;" />

                    <TextView
                        android:id="@+id/userWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:text="200 lbs." />
                </TableRow>

                <!-- Exercise History -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_gravity="center_horizontal"
                        android:text="Exercise History:"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

            <!--Makes history scrollable-->
            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TableLayout
                    android:id="@+id/tLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:columnCount="3"
                    android:weightSum="3">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_gravity="left"
                            android:textSize="12dp"
                            android:text="EXERCISE NAME" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:gravity="right"
                            android:paddingRight="20dp"
                            android:textSize="12dp"
                            android:text="SETS" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:gravity="left"
                            android:paddingRight="10dp"
                            android:textSize="12dp"
                            android:text="DATE/TIME" />
                    </TableRow>
                    <!--We can use this row as a template to make rows dynamically.
                    Get this row in a (TableRow)templateRow then,
                    get the LayoutParams using templateRow.getLayoutParams,
                    make a new row, then set the the LayoutParams from temp row-->
                    <TableRow
                        android:id="@+id/exerciseRowTemplate"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/exerciseNameTemplate"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:textColor="@color/white"
                            android:layout_gravity="left"
                            android:text=""
                            android:maxWidth="140dp"/>

                        <TextView
                            android:id="@+id/exerciseSetsTemplate"
                            android:layout_width="80dp"
                            android:maxWidth="80dp"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:gravity="right"
                            android:paddingRight="20dp"
                            android:text="" />
                        <TextView
                            android:id="@+id/exerciseDateTimeTemplate"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:gravity="right"
                            android:paddingRight="10dp"
                            android:text="" />
                    </TableRow>

                </TableLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal"
            android:padding="5dp"
            android:id="@+id/linearLayout2"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnPlayMusic"
                style="@style/button_text"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_button"
                android:text="@string/button_play_music"
                android:onClick="onClickPlayMusic"
                android:layout_weight="1" />
            <Button
                android:id="@+id/btnExerciseEntry"
                style="@style/button_text"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_button"
                android:text="@string/button_start_exercise"
                android:onClick="onClickExerciseEntry"
                android:layout_weight="1" />
            Button
                android:id="@+id/btnExerciseInfo"
                style="@style/button_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_button"
                android:text="@string/button_exercise_info"
                android:onClick="onClickExerciseInfo"
                android:layout_weight="1" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
